Fix bugged media query on dark mode

--- a/src/components/IntroCards/IntroCards.scss
+++ b/src/components/IntroCards/IntroCards.scss
@@ -40,6 +40,7 @@
 
         @media screen and (max-width: 1020px) {
             padding: 61px 56px 58px 60px;
+            max-width: 565px;
         }
 
         @media screen and (max-width: 750px) {
@@ -48,10 +49,16 @@
 
         @media screen and (max-width: 600px) {
             padding: 36px 26px 36px 30px;
+            max-width: 410px;
+        }
+
+        @media screen and (max-width: 490px) {
+            max-width: 280px;
         }
 
         @media screen and (max-width: 360px) {
             padding: 24px 20px 24px 28px;
+            max-width: 230px;
         }
 
         h3 {
